# iron-pony

./: Cargo.toml  README.md
crates/iron-pony-cli/: Cargo.toml
crates/iron-pony-cli/src/: main.rs
crates/iron-pony-core/: Cargo.toml
crates/iron-pony-core/src/: balloon.rs  fortune.rs  lib.rs  pony.rs
crates/iron-pony-parity/: Cargo.toml
crates/iron-pony-parity/src/: lib.rs
crates/iron-pony-spec/: Cargo.toml
crates/iron-pony-spec/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
spec/: requirements.yaml
testdata/balloons/: classic.balloon  say.balloon
testdata/fortunes/: sample
testdata/ponies/: default.pony  simple_say.pony  simple_think.pony  twilight.pony
tests/parity_cases/: say_basic.json  stdin_metadata.json  think_wrap.json
